--- a/友链/index.html
+++ b/友链/index.html
@@ -470,9 +470,9 @@
     <script
     src="https://giscus.app/client.js"
     data-repo="plainfate/plainfate.github.io"
-    data-repo-id=""
+    data-repo-id="R_kgDOO_WVQA"
     data-category="Announcements"
-    data-category-id=""
+    data-category-id="DIC_kwDOO_WVQM4CrzPu"
     data-mapping="pathname"
     data-strict="0"
     data-reactions-enabled="1"
